--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "private": true,
   "workspaces": {
-    "packages": ["packages/*"]
+    "packages": ["packages/*"],
+    "nohoist": ["**/ts-jest", "**/ts-jest/**"]
   },
   "scripts": {
     "test": "yarn workspace test test"
