--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "private": true,
   "workspaces": {
-    "packages": ["packages/*"],
-    "nohoist": ["**/ts-jest", "**/ts-jest/**"]
+    "packages": ["packages/*"]
   },
   "scripts": {
     "test": "yarn workspace test test"
